Switching to Google hosted jQuery

--- a/exp/templates/exp/index.html
+++ b/exp/templates/exp/index.html
@@ -8,7 +8,7 @@
 <head>
     <title>{% trans 'skills&exp' %}</title>
     <link rel="stylesheet" href="{% static 'exp/style.css' %}">
-    <script src="{% static 'jquery-3.6.1.min.js' %}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script>
         function getTunedColor(color, tune) {
             let newRGB = "#";
